# pangu

./: .gitignore  Application.cpp  CMakeLists.txt  Makefile  README.md  SYNTAX.md  SYNTAX_ZH.md  TARGET_LIST.md  all_test.sh  count.sh  format  keywords.list  pangu-grammer.cpp  pangu_driver.cpp  pangu_driver.h  pangu_grammer.cpp  pangu_lexer.cpp  pangu_sema.cpp  parts.h  test.md  test_out
bootstrap/: 00_types.pgl  emitter.pgl  lexer.pgl  main.pgl  parser.pgl  runtime.c
bootstrap2/: 00_types.pgl  emitter.pgl  lexer.pgl  main.pgl  parser.pgl
examples/: bootstrap_lexer.pgl  bootstrap_lexer_pipeline.pgl  bootstrap_lexer_with_char.pgl  mini_lexer.pgl
examples/pglang/: README.md  main.pgl
grammer/: CMakeLists.txt  CODE_TREE.md  datas.cpp  datas.h  declare.h  enums.h  grammer.cpp  grammer.h  packer.cpp  packer.h  pipe_code.cpp  pipelines.cpp  pipelines.h  swicher.cpp  switcher.cpp  switcher.h
lexer/: CMakeLists.txt  datas.cpp  datas.h  lexer.cpp  lexer.h  pipelines.cpp  pipelines.h  switchers.cpp  switchers.h
llvm_backend/: CMakeLists.txt  llvm_backend.cpp  llvm_backend.h
pgcodes/: CMakeLists.txt  codes.cpp  codes.h  datas.cpp  datas.h  enums.h  packers.cpp  packers.h  pipelines.cpp  pipelines.h  switchers.cpp  switchers.h
pgcodes/pipeline_detail/: pipe_block.cpp  pipe_control.cpp  pipe_if.cpp  pipe_lambda.cpp  pipe_normal.cpp
pgl_example/: algorithm_demo.pgl  collection_demo.pgl  curl.pgl  enum_demo.pgl  functional_demo.pgl  string_demo.pgl  struct_demo.pgl  web_server.pgl
pipeline/: CMakeLists.txt  assert.h  datas.h  declare.cpp  declare.h  macro.h  parts_dealer.h  pipeline.cpp  pipeline.h  product_pack.cpp  product_pack.h  switcher.cpp  switcher.h
runtime/: CMakeLists.txt  datas.h  pangu_builtins.c
sema/: CMakeLists.txt  sema.cpp  sema.h  test.cpp
stdlib/: prelude.pgl
stdlib/core/: io.pgl  math.pgl
stdlib/http/: http.pgl
stdlib/json/: json.pgl
stdlib/net/: socket.pgl
test_datas/compile/: args_access.pgl.target  array_ops.pgl  array_ops.pgl.target  bitwise_ops.pgl  break_continue.pgl  char_bool.pgl  char_bool.pgl.target  closure.pgl.target  const_decl.pgl.target  defer.pgl  dispatch.pgl  dyn_array.pgl  enum_data.pgl  enumerate_for.pgl  enumerate_for.pgl.target  fileio.pgl.target  for_each_array.pgl  for_in_loop.pgl  for_in_loop.pgl.target  for_loop.pgl  func_ref.pgl  func_ref.pgl.target  generic.pgl  hashmap.pgl.target  if_else.pgl  import_stdlib.pgl  index_access.pgl  interface.pgl  map_literal.pgl  map_literal.pgl.target  match_expr.pgl  match_expr.pgl.target  method_call.pgl  (+20 more)
util/: CMakeLists.txt  bytes_reader.h
virtual_machine/: CMakeLists.txt  heap_memory.h  logic_core.cpp  logic_core.h  machine.cpp  machine.h
(+151 files in other folders)
